src/index.css
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

@font-face {
  font-family: 'Roboto Condensed';
  src: url('/fonts/RobotoCondensed-VariableFont_wght.ttf') format('truetype');
  font-weight: 400 700;
  font-display: swap;
}
@font-face {
  font-family: 'JetBrains Mono';
  src: url('/fonts/JetBrainsMono-VariableFont_wght.ttf') format('truetype');
  font-weight: 400 700;
  font-display: swap;
}

:root {
  --font-sans: "Roboto Condensed", "Roboto Condensed Fallback";
  --font-mono: "JetBrains Mono", "JetBrains Mono Fallback";
  --radius: 0.625rem;
  /* white */
  --d-background: oklch(1 0 0);

  /* zinc-950 */
  --d-foreground: oklch(0.141 0.005 285.823);

  /* zinc-950 */
  --d-primary: oklch(0.141 0.005 285.823);

  /* zinc-50 */
  --d-primary-foreground: oklch(0.985 0 0);

  /* zinc-100 */
  --d-muted: oklch(0.967 0.001 286.375);

  /* zinc-500 */
  --d-muted-foreground: oklch(0.552 0.016 285.938);

  /* white */
  --d-card: oklch(1 0 0);

  /* white */
  --d-popover: oklch(1 0 0);

  /* zinc-950 */
  --d-popover-foreground: oklch(0.141 0.005 285.823);

  /* zinc-100 */
  --d-accent: oklch(0.967 0.001 286.375);

  /* zinc-900 */
  --d-accent-foreground: oklch(0.21 0.006 285.885);

  /* zinc-200 */
  --d-border: oklch(0.92 0.004 286.32);

  /* color-mix */
  --d-grid: color-mix(in oklab, var(--d-border) 64%, var(--d-background));

  /* zinc-200 */
  --d-input: oklch(0.92 0.004 286.32);

  /* blue-600 */
  --d-ring: oklch(0.546 0.245 262.881);

  /* blue-600 */
  --d-info: oklch(0.546 0.245 262.881);

  /* green-500 */
  --d-success: oklch(0.723 0.219 149.579);

  /* red-600 */
  --d-destructive: oklch(0.577 0.245 27.325);

  /* blue-700 */
  --d-link: oklch(0.488 0.243 264.376);

  --pattern-foreground: oklch(0.94 0.005 285.823)	;


}

.dark {
  /* zinc-950 */
  --d-background: oklch(0.141 0.005 285.823);

  /* zinc-50 */
  --d-foreground: oklch(0.985 0 0);

  /* zinc-700 */
  --d-primary: oklch(0.37 0.013 285.805);

  /* zinc-50 */
  --d-primary-foreground: oklch(0.985 0 0);

  /* zinc-800 */
  --d-muted: oklch(0.274 0.006 286.033);

  /* zinc-400 */
  --d-muted-foreground: oklch(0.705 0.015 286.067);

  /* zinc-900 */
  --d-card: oklch(0.21 0.006 285.885);

  /* zinc-900 */
  --d-popover: oklch(0.21 0.006 285.885);

  /* zinc-50 */
  --d-popover-foreground: oklch(0.985 0 0);

  /* zinc-800 */
  --d-accent: oklch(0.274 0.006 286.033);

  /* zinc-50 */
  --d-accent-foreground: oklch(0.985 0 0);

  /* zinc-800 */
  --d-border: oklch(0.274 0.006 286.033);

  /* color-mix */
  --d-grid: color-mix(in oklab, var(--d-border) 64%, var(--d-background));

  /* zinc-800 */
  --d-input: oklch(0.274 0.006 286.033);

  /* blue-500 */
  --d-ring: oklch(0.623 0.214 259.815);

  /* blue-500 */
  --d-info: oklch(0.623 0.214 259.815);

  /* green-500 */
  --d-success: oklch(0.723 0.219 149.579);

  /* red-700 */
  --d-destructive: oklch(0.505 0.213 27.518);

  /* blue-500 */
  --d-link: oklch(0.623 0.214 259.815);

  --pattern-foreground: oklch(0.32 0 0); /* blanco suave, más apagado */


}

@theme inline {
  --color-background: var(--d-background);
  --color-foreground: var(--d-foreground);
  --color-primary: var(--d-primary);
  --color-primary-foreground: var(--d-primary-foreground);
  --color-muted: var(--d-muted);
  --color-muted-foreground: var(--d-muted-foreground);
  --color-card: var(--d-card);
  --color-popover: var(--d-popover);
  --color-popover-foreground: var(--d-popover-foreground);
  --color-accent: var(--d-accent);
  --color-accent-foreground: var(--d-accent-foreground);
  --color-border: var(--d-border);
  --color-grid: var(--d-grid);
  --color-input: var(--d-input);
  --color-ring: var(--d-ring);
  --color-info: var(--d-info);
  --color-success: var(--d-success);
  --color-destructive: var(--d-destructive);
  --color-link: var(--d-link);

  --font-sans: var(--font-sans);
  --font-mono: var(--font-mono);
  --font-heading: var(--font-sans);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }

  /* Estilo base de la scrollbar */
  ::-webkit-scrollbar {
    width: 5px;
    height: 5px;
  }

  ::-webkit-scrollbar-track {
    background: var(--color-background);
  }

  ::-webkit-scrollbar-thumb {
    background-color: var(--color-accent);
    border-radius: 4px;
  }

  .dark ::-webkit-scrollbar-track {
    background: var(--color-background);
  }

  .dark ::-webkit-scrollbar-thumb {
    background-color: var(--color-accent);
  }
}


* {
  box-sizing: border-box;
  scrollbar-width: thin;
    scrollbar-color: var(--d-border) transparent;
}

body {
  font-family: var(--font-sans);
}


.bg-diagonal-pattern {
  background-image: repeating-linear-gradient(
    315deg,
    transparent 0% 35%,
    var(--color-grid) 35% 50%,
    transparent 50% 85%,
    var(--color-grid) 85% 100%
  );
  background-size: 9px 9px;
}

@keyframes fade-in-up {
  0% {
    opacity: 0;
    transform: translateY(20px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

@layer utilities {
  .animate-fade-in-up {
    animation: fade-in-up 0.8s ease-out;
  }
}

@utility screen-line-before {
  @apply relative before:absolute before:top-0 before:-left-[100vw] before:-z-1 before:h-px before:w-[200vw] before:bg-grid;
}

@utility screen-line-after {
  @apply relative after:absolute after:bottom-0 after:-left-[100vw] after:-z-1 after:h-px after:w-[200vw] after:bg-grid;
}

@keyframes tooltip-fade-in {
  from {
    opacity: 0;
    transform: translateY(6px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes tooltip-fade-out {
  from {
    opacity: 1;
    transform: translateY(0);
  }
  to {
    opacity: 0;
    transform: translateY(6px);
  }
}

.tooltip-content[data-state="delayed-open"] {
  animation: tooltip-fade-in 0.2s ease-out forwards;
}

.tooltip-content[data-state="closed"] {
  animation: tooltip-fade-out 0.2s ease-in forwards;
}

